syntax = "proto3";

package general;

service GeneralProject {
  rpc InferRequest (GeneralRequest) returns (GeneralResponse);
}

message GeneralRequest {
    string data = 1;
}

message GeneralResponse {
    string message = 1;
}
